--- a/clover_service/res/values-v11/styles.xml
+++ b/clover_service/res/values-v11/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppBaseTheme" parent="android:Theme.Holo.NoActionBar">
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.NoActionBar">
     </style>
     
 </resources>
