--- a/clover_service/res/layout/activity_main.xml
+++ b/clover_service/res/layout/activity_main.xml
@@ -45,7 +45,15 @@
             android:id="@+id/broadcast"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Broadcast" />
+            android:text="Broadcast"
+            android:layout_marginBottom="20dp" />
+        
+        <CheckBox 
+            android:id="@+id/location_tracking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GPS Location tracking" />
+        
     </LinearLayout>
 
 </ScrollView>
